fixed skills spacing (#3)
* more sensible css grid

* more sensible css grid pt 2

--- a/scss/layout/_actor-sheet.scss
+++ b/scss/layout/_actor-sheet.scss
@@ -1,19 +1,20 @@
+$actor-gridgap: 4px;
+
 .actor-sheet {
     display: grid;
-    grid-gap: 4 px;
+    grid-gap: $actor-gridgap;
     width: 800px;
-    grid-template-rows: auto;
+    grid-template-rows: repeat(3, min-content);
     grid-template-columns: auto;
     grid-template-areas:
         "sheet-header"
-        "sheet-abilities"
         "sheet-tabs"
         "sheet-body";
 }
 
 .sheet-abilities {
     display: grid;
-    grid-gap: 4 px;
+    grid-gap: $actor-gridgap;
     width: inherit;
     grid-template-columns: 8em 1fr;
     grid-template-areas:
